  * Rearranged code to match the gem name.  Things were mismatched between odata_ruby and ruby_odata.

=== 0.0.4
* New Features
  * Query Enhancement: skip
  * Query Enhancement: top
  * Ability to perform paging using skip and top together
  * Updated README with examples for order_by, skip, and top
  
=== 0.0.5
* Bug Fixes
  * Works with Ruby 1.9.1
  * Works with ActiveSupport 3.0.0.beta4
  
=== 0.0.6
* New Features
  * Ability to batch saves (Adds, Updates, Deletes); this will help save on network chatter

=== 0.0.7
* New Features
  * Complex Types are now supported
  * Support for Edm.Int16, Edm.Int32, Edm.Int64
  * Support for Edm.Decimal
  * Support for Edm.DateTime
  
=== 0.0.8
* New Features
  * Basic HTTP Authentication (thanks J.D. Mullin)
  * Modified cucumber tests to setup the test database so you no longer need to copy them yourself
  * Support for nullable elements returned from the Data Service (m:null ="true")
* Bug Fixes
  * ActiveSupport 2.3.x (tested 2.3.11) and 3.0.x (tested 3.0.4) are now supported
  * Works with Ruby 1.9.2

=== 0.0.9
* New Features
  * Support for self-signed SSL certificates (thanks J.D. Mullin)
  * Refactored building classes/collections to only make one call to the service
  * Added support for a WCF service with lowercase entities (reported by Klaus Rohe)
* Bug Fixes
  * Fixed issue with passing a service URL with a trailing slash
* Other
  * Cleaned up testing by adding a default task to the Rakefile that runs RSpec and Cucumber

=== 0.0.10
* Bug Fixes
  * Handled ArgumentError on the Time.parse for older versions of Ruby; used DateTime.parse instead if Time.parse fails
  * Removed the camelize method call when building the root URL for collections (Reported by mkoegel, issue #3 on github)
* Other
  * Change HTTP port to 8989 since 8888 conflicts with the Intel AppStore
  * Refactored service step for HTTP calls where the service address is defined within the step making it easier to make changes in the future.